samples/_failures_safe/1761331742_cbfd23_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_26cb5f1b.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_26cb5f1b.c:174:14: error: ‘TOKEN_’ undeclared (first use in this function)
  174 |         case TOKEN_
      |              ^~~~~~
./samples/SAFE/__tmp_26cb5f1b.c:174:14: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_26cb5f1b.c:174:9: error: expected ‘:’ or ‘...’ at end of input
  174 |         case TOKEN_
      |         ^~~~
./samples/SAFE/__tmp_26cb5f1b.c:174:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_26cb5f1b.c:174:9: error: expected declaration or statement at end of input
